# posedec

./: CMakeLists.txt  CmakeLists.txt
include/posedec/: detector.hpp
src/: detector.cpp
